@@ -12,6 +12,7 @@ from Products.PluginIndexes.PathIndex.PathIndex import PathIndex
 _marker = []
 logger = logging.getLogger('ExtendedPathIndex')
 
+
 class ExtendedPathIndex(PathIndex):
     """ A path index stores all path components of the physical
     path of an object:
@@ -26,9 +27,9 @@ class ExtendedPathIndex(PathIndex):
       'all docids with this path component on this level'
 
     In addition
-    
+
     - there is a terminator (None) signifying the last component in the path
-    
+
     - 2 additional indexes map absolute path to either the doc id or doc ids of
       contained objects. This allows for rapid answering of common queries.
 
@@ -39,26 +40,26 @@ class ExtendedPathIndex(PathIndex):
     manage_options= (
         {'label': 'Settings',
          'action': 'manage_main',
-         'help': ('ExtendedPathIndex','ExtendedPathIndex_Settings.stx')},
+         'help': ('ExtendedPathIndex', 'ExtendedPathIndex_Settings.stx')},
     )
 
     query_options = ("query", "level", "operator", "depth", "navtree",
                                                               "navtree_start")
-    
+
     indexed_attrs = None
 
     def __init__(self, id, extra=None, caller=None):
         """ ExtendedPathIndex supports indexed_attrs """
         PathIndex.__init__(self, id, caller)
-        
+
         if isinstance(extra, dict):
             attrs = extra.get('indexed_attrs', None)
         else:
             attrs = getattr(extra, 'indexed_attrs', None)
-        
+
         if attrs is None:
             return
-        
+
         if isinstance(attrs, str):
             attrs = attrs.split(',')
         attrs = filter(None, [a.strip() for a in attrs])
@@ -72,7 +73,7 @@ class ExtendedPathIndex(PathIndex):
         self._index_parents = OOBTree()
         self._index_items = OIBTree()
 
-    def index_object(self, docid, obj ,threshold=100):
+    def index_object(self, docid, obj, threshold=100):
         """ hook for (Z)Catalog """
 
         # PathIndex first checks for an attribute matching its id and
@@ -101,10 +102,11 @@ class ExtendedPathIndex(PathIndex):
         comps = filter(None, path.split('/'))
 
         # Make sure we reindex properly when path change
-        if self._unindex.has_key(docid) and self._unindex.get(docid) != path:
+        old_path = self._unindex.get(docid, None)
+        if old_path is not None and old_path != path:
             self.unindex_object(docid)
 
-        if not self._unindex.has_key(docid):
+        if docid not in self._unindex:
             self._length.change(1)
 
         for i, comp in enumerate(comps):
@@ -112,12 +114,13 @@ class ExtendedPathIndex(PathIndex):
 
         # Add terminator
         self.insertEntry(None, docid, len(comps)-1)
-        
+
         # Add full-path indexes, to optimize certain edge cases
         parent_path = '/' + '/'.join(comps[:-1])
-        if not self._index_parents.has_key(parent_path):
+        parents = self._index_parents.get(parent_path, None)
+        if parents is None:
             self._index_parents[parent_path] = IITreeSet()
-        self._index_parents[parent_path].insert(docid)
+        parents.insert(docid)
         self._index_items[path] = docid
 
         self._unindex[docid] = path
@@ -126,14 +129,15 @@ class ExtendedPathIndex(PathIndex):
     def unindex_object(self, docid):
         """ hook for (Z)Catalog """
 
-        if not self._unindex.has_key(docid):
+        old_value = self._unindex.get(docid, None)
+        if old_value is None:
             logger.log(logging.INFO,
                        'Attempt to unindex nonexistent object with id '
                        '%s' % docid)
             return
 
         # There is an assumption that paths start with /
-        comps = filter(None, self._unindex[docid].split('/'))
+        comps = filter(None, old_value.split('/'))
 
         def unindex(comp, level, docid=docid):
             self._index[comp][level].remove(docid)
@@ -145,14 +149,15 @@ class ExtendedPathIndex(PathIndex):
         try:
             for level, comp in enumerate(comps):
                 unindex(comp, level)
-            
+
             # Remove the terminator
             unindex(None, len(comps) - 1)
-            
+
             # Remove full-path indexes
             parent_path = '/' + '/'.join(comps[:-1])
-            self._index_parents[parent_path].remove(docid)
-            if not self._index_parents[parent_path]:
+            parents = self._index_parents[parent_path]
+            parents.remove(docid)
+            if not parents:
                 del self._index_parents[parent_path]
             del self._index_items['/'.join([parent_path, comps[-1]])]
         except KeyError:
@@ -169,27 +174,27 @@ class ExtendedPathIndex(PathIndex):
         path is either a string representing a
         relative URL or a part of a relative URL or
         a tuple (path,level).
-        
+
         default_level specifies the level to use when no more specific
         level has been passed in with the path.
 
         level >= 0  starts searching at the given level
         level <  0  finds matches at *any* level
-        
+
         depth let's you limit the results to items at most depth levels deeper
-        than the matched path. depth == 0 means no subitems are included at all,
-        with depth == 1 only direct children are included, etc. depth == -1, the
-        default, returns all children at any depth.
-        
+        than the matched path. depth == 0 means no subitems are included at
+        all, with depth == 1 only direct children are included, etc.
+        depth == -1, the default, returns all children at any depth.
+
         navtree is treated as a boolean; if it evaluates to True, not only the
         query match is returned, but also each container in the path. If depth
-        is greater than 0, also all siblings of those containers, as well as the
-        siblings of the match are included as well, plus *all* documents at the
-        starting level.
-        
+        is greater than 0, also all siblings of those containers, as well as
+        the siblings of the match are included as well, plus *all* documents at
+        the starting level.
+
         navtree_start limits what containers are included in a navtree search.
-        If greater than 0, only containers (and possibly their siblings) at that
-        level and up will be included in the resultset.
+        If greater than 0, only containers (and possibly their siblings) at
+        that level and up will be included in the resultset.
 
         """
         if isinstance(path, basestring):
@@ -212,7 +217,7 @@ class ExtendedPathIndex(PathIndex):
         #
         # Optimisations
         #
-        
+
         pathlength = level + len(comps) - 1
         if navtree and navtree_start > min(pathlength + depth, self._depth):
             # This navtree_start excludes all items that match the depth
@@ -241,7 +246,7 @@ class ExtendedPathIndex(PathIndex):
                     parent_path = '/' + '/'.join(comps[:i])
                     add(index.get(parent_path))
                 return convert(result)
-            
+
             if not path.startswith('/'):
                 path = '/' + path
             if depth == 0:
@@ -251,7 +256,7 @@ class ExtendedPathIndex(PathIndex):
             else:
                 # Single depth search
                 return self._index_parents.get(path)
-        
+
         # Avoid using the root set
         # as it is common for all objects anyway and add overhead
         # There is an assumption about all indexed values having the
@@ -269,11 +274,11 @@ class ExtendedPathIndex(PathIndex):
         if not comps and depth == -1:
             # Recursive search for everything
             return IISet(self._unindex)
-        
+
         #
         # Core application of the indexes
         #
-        
+
         pathset  = None # Same as pathindex
         depthset = None # For limiting depth
 
@@ -281,9 +286,9 @@ class ExtendedPathIndex(PathIndex):
             # Include the elements up to the matching path
             depthset = multiunion([
                 self._index.get(None, {}).get(i, IISet())
-                for i in range(min(navtree_start, level), 
+                for i in range(min(navtree_start, level),
                                max(navtree_start, level) + 1)])
-        
+
         indexedcomps = enumerate(comps)
         if not navtree:
             # Optimize relative-path searches by starting with the
@@ -292,7 +297,7 @@ class ExtendedPathIndex(PathIndex):
             # the bigger rootset to include siblings along the way.
             indexedcomps = list(indexedcomps)
             indexedcomps.reverse()
-        
+
         for i, comp in indexedcomps:
             # Find all paths that have comp at the given level
             res = self._index.get(comp, {}).get(i + level)
@@ -300,11 +305,11 @@ class ExtendedPathIndex(PathIndex):
                 pathset = IISet()
                 if not navtree: return pathset
             pathset = intersection(pathset, res)
-            
+
             if navtree and i + level >= navtree_start:
                 depthset = union(depthset, intersection(pathset,
                     self._index.get(None, {}).get(i + level)))
-        
+
         if depth >= 0:
             # Limit results to those that terminate within depth levels
             start = len(comps) - 1
@@ -351,10 +356,12 @@ class ExtendedPathIndex(PathIndex):
         attrs = self.indexed_attrs or ('getPhysicalPath',)
         return tuple(attrs)
 
+manage_addExtendedPathIndexForm = DTMLFile('dtml/addExtendedPathIndex',
+                                           globals())
 
-manage_addExtendedPathIndexForm = DTMLFile('dtml/addExtendedPathIndex', globals())
 
-def manage_addExtendedPathIndex(self, id, extra=None, REQUEST=None, RESPONSE=None, URL3=None):
+def manage_addExtendedPathIndex(self, id, extra=None, REQUEST=None,
+                                RESPONSE=None, URL3=None):
     """Add an extended path index"""
     return self.manage_addIndex(id, 'ExtendedPathIndex', extra=extra,
                 REQUEST=REQUEST, RESPONSE=RESPONSE, URL1=URL3)
